# coding_projects

./: LICENSE  README.md  main.cpp
c++/: compiler_help.txt
c++/Docker/D1/: Dockerfile  main.cpp
c++/Lerning/: main.cpp
c++/Lerning/hackerrank/: arrayindroduction.cpp  classes.cpp  classesandobject.cpp  conditionalstatments.cpp  functions.cpp  inputandoutput.cpp  main.cpp  stringstream.cpp
c++/SDL2/Template/src/: main.cpp
c++/SDL2/ca/: main.cpp
c++/SDL2/clock/: main.cpp
c++/SDL2/first_game/: MakeFile
c++/SDL2/monopong/: main.cpp
c++/SDL2/sorting_algs/: CMakeLists.txt  Makefile  SortingAlgs.cpp  SortingAlgs.h  main.cpp  main_menu.cpp  main_menu.h
c++/SDL2/visualization/: Makefile  SortingAlgs.cpp  SortingAlgs.h  main.cpp  main_menu.cpp  main_menu.h
c++/SDL2/whirlynoise/: main.cpp
c++/learning/: DP_Backtracking.cpp  main.cpp  pointerandref.cpp
c++/learning/AlgUndDatensInC/: linkedlist.c
c++/learning/School/: calc_n_numbers.cpp
c++/learning/hackerrank/: attributeparser.cpp  basicdatatypes.cpp  boxit.cpp  earesevectoritmes.cpp  forloop.cpp  lowerboundtlsvector.cpp  maps.cpp  pointer.cpp  reactangleinharitanceoop.cpp  setstl.cpp  sortingavector.cpp  stringmanipulation.cpp  varaiblesizedarrays.cpp
c++/own_libary/: main.cpp
c++/projects/8_Damenproblem/: DP_Backtracking_Rekursiv.cpp
c++/projects/LinkedLists/: main.cpp
c++/projects/ScanProcess/: main.cpp
golang/booking-app/: main.go
golang/booking-app/helper/: helper.go
golang/sorting-alg/: go.mod
golang/sorting-alg/sortalg/: sorting_algorithms.go
rust/lerning/lerning1/: Cargo.toml
(+15 files in other folders)
